# danmaQ

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  cx_freeze.py  danmaQ.py  dm_ui_test.py  setup.py  update_i18n.sh
.github/workflows/: macOS.yml  ubuntu.yml  windows.yml
.travisci/: .travis.sh  Dockerfile.debian  Dockerfile.fedora  Dockerfile.leap  Dockerfile.ubuntu
danmaQ/: __init__.py  app.py  config_dialog.py  danmaq_ui.py  settings.py  subscriber.py  tray_icon.py
flatpak/: install.sh  org.tuna.danmaQ.json  org.tuna.danmaQ.local.json
macOS/: Info.plist
man/: CMakeLists.txt  danmaQ
src/: .ycm_extra_conf.py  CMakeLists.txt  DMCanvas.cpp  DMCanvas.hpp  DMMainWindow.cpp  DMMainWindow.hpp  Danmaku.cpp  Danmaku.hpp  Subscriber.cpp  Subscriber.hpp  common.hpp  danmaQ.rc  danmaQ_app.cpp  danmaQ_app.h  danmaku.h  danmaku_ui.cpp  danmaku_ui.h  danmaku_window.cpp  danmaku_window.h  i18n.qrc  icons.qrc  main.cpp  socket.qrc  subscriber.cpp  subscriber.h
src/resource/: CMakeLists.txt  danmaQ.desktop  moe.tuna.danmaq.metainfo.xml  socket.html
src/translations/: CMakeLists.txt  i18n_ja.ts  i18n_zh.ts  ja_JP.ts  zh_CN.ts  zh_TW.ts
tests/: CMakeLists.txt  json_test.cpp
